# backend-project-public-

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py
app/api/: deps.py
app/api/v1/: api.py
app/api/v1/endpoints/: auth.py  notes.py
app/core/: config.py  security.py
app/crud/: note.py  user.py
app/db/: database.py  models.py
app/schemas/: note.py  user.py
app/shemas/: note.py  user.py
app/tests/: conftest.py  test_auth.py  test_notes.py
migrations/: env.py
migrations/versions/: 662abeab86f8_initial_migration.py
